Implement Attributes/Outputs BE (part 1)
Change-Id: I2cda966ab878ae7aee4bcfecf266c5c251c91164
Signed-off-by: Vasyl Razinkov <vasyl.razinkov@est.tech>
Issue-ID: SDC-3448